--- a/angular.json
+++ b/angular.json
@@ -20,21 +20,20 @@
             "outputPath": "dist/master-frontend-web",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*.wasm",
+                "input": "projects/wasm-webtransport/src/lib/wasm-webtransport/pkg"
               }
             ],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
-            ],
+            "styles": ["@angular/material/prebuilt-themes/azure-blue.css", "src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -85,10 +84,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -97,11 +93,68 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
-            ],
+            "styles": ["@angular/material/prebuilt-themes/azure-blue.css", "src/styles.scss"],
             "scripts": []
+          }
+        }
+      }
+    },
+    "wasm-test": {
+      "projectType": "library",
+      "root": "projects/wasm-test",
+      "sourceRoot": "projects/wasm-test/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/wasm-test/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/wasm-test/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/wasm-test/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/wasm-test/tsconfig.spec.json",
+            "polyfills": ["zone.js", "zone.js/testing"]
+          }
+        }
+      }
+    },
+    "wasm-webtransport": {
+      "projectType": "library",
+      "root": "projects/wasm-webtransport",
+      "sourceRoot": "projects/wasm-webtransport/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/wasm-webtransport/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/wasm-webtransport/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/wasm-webtransport/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/wasm-webtransport/tsconfig.spec.json",
+            "polyfills": ["zone.js", "zone.js/testing"]
           }
         }
       }
