--- a/projects/wasm-webtransport/src/lib/wasm-webtransport/Cargo.toml
+++ b/projects/wasm-webtransport/src/lib/wasm-webtransport/Cargo.toml
@@ -15,5 +15,14 @@ rxrust = "1.0.0-beta.8"
 tokio = { version = "1.36.0", features = ["rt"] }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
-web-sys = "0.3.69"
-xwt = "0.13.0"
+web-sys = { version = "0.3.69", features = [ "WebTransport", "WebTransportOptions", "WebTransportHash", "console" ]}
+xwt-core = { version = "0.4.2", default-features = false }
+# xwt-web-utils = "0.1.3"
+xwt-cert-utils = "0.1.0"
+xwt-web-sys = { version = "0.11.0" }
+serde_json = "1.0.118"
+serde = { version = "1.0.203", features = [ "derive" ] }
+
+[features]
+default = []
+web_sys_unstable_apis = []
