--- a/projects/wasm-webtransport/src/lib/wasm-webtransport/Cargo.toml
+++ b/projects/wasm-webtransport/src/lib/wasm-webtransport/Cargo.toml
@@ -12,7 +12,7 @@ lto = true
 
 [dependencies]
 # rxrust = "1.0.0-beta.8"
-tokio = { version = "1.36.0", features = ["rt"] }
+tokio = { version = "1.36.0", features = ["rt", "macros"] }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.69", features = [ "WebTransport", "WebTransportOptions", "WebTransportHash", "console" ]}
@@ -24,6 +24,7 @@ xwt-web-sys = { version = "0.11.0" }
 serde_json = "1.0.118"
 serde = { version = "1.0.203", features = [ "derive" ] }
 serde-wasm-bindgen = "0.6.5"
+console_error_panic_hook = "0.1.7"
 
 [features]
 default = []
