--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bson-objectid": "^2.0.4",
     "fabric": "^6.0.0",
     "http-status-codes": "^2.3.0",
+    "pkijs": "^3.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
